--- a/wp/wp-content/themes/blankslate-child/scss/_variables.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/_variables.scss
@@ -44,3 +44,7 @@ $desktop-lg: 'min-width: 1200px';
 @mixin wrapper-lg {
   width: 1024px;
 }
+
+@mixin box-shadow {
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+}
