--- a/wp/wp-content/themes/blankslate-child/scss/section.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/section.scss
@@ -1,5 +1,5 @@
 .row {
-  padding: $spacing-x3 0;
+  padding: $spacing-x4 0;
 
   @media ($tablet) {
     padding: $spacing-x5 0;
@@ -23,9 +23,9 @@
     }
 
     .block {
+      @include box-shadow;
       align-items: center;
       background-color: $grey100;
-      box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.25);
       display: flex;
       height: 250px;
       font-size: 2.4rem;
@@ -42,6 +42,23 @@
       &:last-child {
         margin-bottom: 0;
       }
+
+      a {
+        align-items: center;
+        color: $white;
+        display: flex;
+        height: 100%;
+        justify-content: center;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        background-blend-mode: multiply;
+        transition: background-color 0.5s ease-in-out;
+
+        &:hover {
+          text-decoration: none;
+          background-color: rgba(0, 0, 0, 0.35);
+        }
+      }
     }
   }
 
@@ -53,11 +70,15 @@
         padding: 0 $spacing-x2;
       }
 
+      @media ($desktop-md) {
+        padding: 0;
+      }
+
       .block {
         color: $white;
+        background: transparent url('http://localhost:8000/wp-content/uploads/2019/04/banner-example.jpg') no-repeat center center;
         margin-bottom: 0;
-        background: rgba(0, 0, 0, 0.5) url('http://localhost:8000/wp-content/uploads/2019/04/banner-example.jpg') no-repeat center center;
-        background-blend-mode: multiply;
+
 
         &.price {
           background-image: url('http://localhost:8000/wp-content/uploads/2019/04/banner-example.jpg');
@@ -67,8 +88,7 @@
   }
 
   &.about {
-    background-color: $grey900;
-    color: $white;
+    background-color: $grey100;
     display: flex;
     flex-direction: column;
 
@@ -99,6 +119,10 @@
       @media ($tablet) {
         flex: 1 0 50%;
         margin-right: $spacing-x2;
+      }
+
+      img {
+        @include box-shadow;
       }
     }
   }
