--- a/wp/wp-content/themes/blankslate-child/scss/testimonial.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/testimonial.scss
@@ -19,9 +19,9 @@
   }
 
   img {
+    @include box-shadow;
     border-radius: 50%;
     border: 3px solid $yellow;
-    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
     height: 100px;
     margin-bottom: $spacing-x3;
     width: 100px;
