--- a/wp/wp-content/themes/blankslate-child/scss/_variables.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/_variables.scss
@@ -12,6 +12,7 @@ $grey200: #cccccc;
 $grey900: #333333;
 
 $spacing: 8px;
+$spacing-half: $spacing / 2;
 $spacing-x2: $spacing * 2;
 $spacing-x3: $spacing * 3;
 $spacing-x4: $spacing * 4;
