--- a/wp/wp-content/themes/blankslate-child/scss/style.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/style.scss
@@ -16,6 +16,7 @@
 @import './footer';
 @import './default';
 @import './sidebar';
+@import './menu';
 
 @import './featured-image';
 @import './section';
