--- a/wp/wp-content/themes/blankslate-child/scss/buttons.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/buttons.scss
@@ -11,3 +11,31 @@
     background-color: lighten($yellow, 0.2);
   }
 }
+
+.mobile-menu {
+  line-height: 0;
+  position: absolute;
+  right: $spacing;
+  top: 0;
+  width: 25px;
+
+  @media ($tablet) {
+    display: none;
+  }
+  
+  button {
+    background-color: transparent;
+    border: none;
+    line-height: 0.5;
+    padding: 0;
+    width: 100%;
+  
+    div {
+      background-color: $yellow;
+      display: inline-block;
+      height: 3px;
+      margin: 2px 0;
+      width: 100%;
+    }
+  }
+}
