--- a/wp/wp-content/themes/blankslate-child/scss/default.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/default.scss
@@ -6,15 +6,38 @@
   background-size: cover;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   height: 40vh;
   left: auto;
   line-height: 1.2;
+  padding: 0 0 $spacing-x2;
   position: relative;
   right: auto;
-
+  
   @media ($tablet) {
-    height: 30vh;
+    height: 35vh;
+    padding: 0;
+  }
+  
+  h1 {
+    padding: 0 $spacing-x2;
+  }
+  
+  .wrapper {
+    padding: 0;
+    position: relative;
+    width: 100%;
+
+    @media ($tablet) {
+      align-items: center;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      padding: 0 $spacing-x2;
+    }
+
+    @media ($desktop-md) {
+      @include wrapper-md;
+    }
   }
 }
 
