--- a/wp/wp-content/themes/blankslate-child/style.css
+++ b/wp/wp-content/themes/blankslate-child/style.css
@@ -86,18 +86,37 @@ h1 {
   font-size: 2.7rem;
   margin-bottom: 16px; }
 
-#header #site-title {
-  align-items: center;
-  background-color: #000000;
-  display: flex;
-  justify-content: center;
-  padding: 16px 0; }
-  #header #site-title h1 {
-    font-size: 1.6rem; }
-  #header #site-title a {
-    color: #ffffff;
-    text-transform: uppercase;
-    text-decoration: none; }
+#header {
+  background-color: #000000; }
+  #header #site-title {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 16px 0;
+    text-align: center; }
+    @media (min-width: 768px) {
+      #header #site-title {
+        padding: 0 16px;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        padding-top: 16px;
+        padding-bottom: 16px; } }
+    #header #site-title h1 {
+      font-size: 1.6rem; }
+    #header #site-title a {
+      color: #ffffff;
+      text-transform: uppercase;
+      text-decoration: none; }
+    #header #site-title .site-title-inner {
+      position: relative;
+      width: 100%; }
+      @media (min-width: 768px) {
+        #header #site-title .site-title-inner {
+          flex-shrink: 0;
+          flex-grow: 0;
+          flex-basis: auto;
+          width: auto; } }
 
 #default-page-title {
   background-color: rgba(0, 0, 0, 0.5);
@@ -105,6 +124,7 @@ h1 {
   font-weight: 700;
   position: absolute;
   left: 0;
+  justify-content: center;
   right: 0;
   padding: 16px 0;
   text-transform: uppercase;
@@ -217,15 +237,32 @@ h1 {
   background-size: cover;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   height: 40vh;
   left: auto;
   line-height: 1.2;
+  padding: 0 0 16px;
   position: relative;
   right: auto; }
   @media (min-width: 768px) {
     #default-page-title {
-      height: 30vh; } }
+      height: 35vh;
+      padding: 0; } }
+  #default-page-title h1 {
+    padding: 0 16px; }
+  #default-page-title .wrapper {
+    padding: 0;
+    position: relative;
+    width: 100%; }
+    @media (min-width: 768px) {
+      #default-page-title .wrapper {
+        align-items: center;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        padding: 0 16px; } }
+    @media (min-width: 992px) {
+      #default-page-title .wrapper {
+        width: 756px; } }
 
 #default-page-main {
   flex-grow: 1; }
@@ -259,6 +296,35 @@ h1 {
     line-height: 1;
     margin-bottom: 8px;
     text-transform: uppercase; }
+
+.menu-main-menu-container {
+  display: flex;
+  flex-direction: column;
+  padding-top: 16px;
+  text-align: center;
+  text-transform: uppercase; }
+  @media (min-width: 768px) {
+    .menu-main-menu-container {
+      background-color: transparent;
+      display: block;
+      padding: 4px 0; } }
+  .menu-main-menu-container .menu {
+    font-weight: 600; }
+    @media (min-width: 768px) {
+      .menu-main-menu-container .menu {
+        display: flex;
+        flex-direction: row; } }
+    .menu-main-menu-container .menu li {
+      margin-top: 0; }
+      @media (min-width: 768px) {
+        .menu-main-menu-container .menu li {
+          margin: 0 16px; }
+          .menu-main-menu-container .menu li:last-child {
+            margin-right: 0; } }
+  .menu-main-menu-container .menu-item {
+    padding: 4px 0; }
+    .menu-main-menu-container .menu-item a {
+      color: #ffffff; }
 
 #featured-image {
   margin-bottom: 16px; }
@@ -408,6 +474,28 @@ h1 {
   text-transform: uppercase; }
   .btn:hover {
     background-color: #ffba01; }
+
+.mobile-menu {
+  line-height: 0;
+  position: absolute;
+  right: 8px;
+  top: 0;
+  width: 25px; }
+  @media (min-width: 768px) {
+    .mobile-menu {
+      display: none; } }
+  .mobile-menu button {
+    background-color: transparent;
+    border: none;
+    line-height: 0.5;
+    padding: 0;
+    width: 100%; }
+    .mobile-menu button div {
+      background-color: #ffba00;
+      display: inline-block;
+      height: 3px;
+      margin: 2px 0;
+      width: 100%; }
 
 .price-package .heading3 {
   font-size: 2.2rem;
