--- a/wp/wp-content/themes/blankslate-child/scss/buttons.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/buttons.scss
@@ -26,6 +26,7 @@
   button {
     background-color: transparent;
     border: none;
+    cursor: pointer;
     line-height: 0.5;
     padding: 0;
     width: 100%;
