--- a/wp/wp-content/themes/blankslate-child/scss/menu.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/menu.scss
@@ -1,7 +1,7 @@
 .menu-main-menu-container {
   display: flex;
   flex-direction: column;
-  padding-top: $spacing-x2;
+  padding-top: $spacing;
   text-align: center;
   text-transform: uppercase;
 
