--- a/wp/wp-content/themes/blankslate-child/scss/price-card.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/price-card.scss
@@ -31,21 +31,35 @@
   margin-bottom: $spacing-x2;
 
   .heading3 {
-    flex-grow: 1;
     font-size: 2.2rem;
     font-weight: 600;
     text-align: center;
     text-transform: uppercase;
-
+    
     @media ($tablet) {
       font-size: 1.8rem;
     }
   }
 
-  .price {
+  .price-details {
     border-bottom: 5px solid $grey200;
+    margin-bottom: $spacing;
+    text-align: center;
+    
+    @media ($tablet) {
+      min-height: 95px;
+    }
+
+    small {
+      display: inline-block;
+      font-size: 1.6rem;
+      margin-bottom: $spacing;
+    }
+  }
+
+  .price {
     font-size: 4rem;
-    margin-bottom: $spacing-x2;
+    margin-bottom: $spacing;
   }
 
   .plan {
