--- a/wp/wp-content/themes/blankslate-child/scss/base.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/base.scss
@@ -15,7 +15,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 1.6rem;
   font-weight: 300;
-  line-height: 1.3;
+  line-height: 1.5;
 }
 
 a:link,
@@ -88,3 +88,15 @@ h1 {
   font-size: 2.7rem;
   margin-bottom: $spacing-x2;
 };
+
+.hashtag {
+  background-color: $black;
+  color: $yellow;
+  display: inline-block;
+  padding: $spacing;
+  margin-bottom: $spacing-x3;
+
+  @media ($tablet) {
+    background-color: transparent;
+  }
+}
