--- a/wp/wp-content/themes/blankslate-child/scss/default.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/default.scss
@@ -1,7 +1,7 @@
 #default-page-title {
   background-color: rgba(0, 0, 0, 0.65);
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center top 40%;
   background-blend-mode: multiply;
   background-size: cover;
   display: flex;
