--- a/wp/wp-content/themes/blankslate-child/scss/section.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/section.scss
@@ -5,6 +5,22 @@
     padding: $spacing-x5 0;
   }
 
+  &.grey100 {
+    background-color: $grey100;
+  }
+
+  .text-wrapper {
+    @media ($tablet) {
+      margin-left: auto;
+      margin-right: auto;
+      width: 500px;
+    }
+
+    @media ($desktop-md) {
+      width: 650px;
+    }
+  }
+
   .heading1 {
     font-size: 2.4rem;
     font-weight: 600;
@@ -63,6 +79,12 @@
   }
 
   &.home {
+    padding: 0;
+
+    @media ($tablet) {
+      padding: $spacing-x5 0;
+    }
+
     .wrapper {
       padding: 0;
 
@@ -77,11 +99,20 @@
       .block {
         color: $white;
         background: transparent url('http://localhost:8000/wp-content/uploads/2019/04/banner-example.jpg') no-repeat center center;
+        background-size: cover;
         margin-bottom: 0;
 
 
-        &.price {
-          background-image: url('http://localhost:8000/wp-content/uploads/2019/04/banner-example.jpg');
+        &.price-block {
+          background-image: url('http://zeeonefitness.jetchy.co.uk/wp-content/uploads/2019/05/zeeone-fitness-panel-1.jpg');
+        }
+
+        &.testimonials-block {
+          background-image: url('http://zeeonefitness.jetchy.co.uk/wp-content/uploads/2019/05/zeeone-fitness-panel-2.jpg');
+        }
+
+        &.gallery-block {
+          background-image: url('http://zeeonefitness.jetchy.co.uk/wp-content/uploads/2019/05/zeeone-fitness-panel-3.jpg');
         }
       }
     }
@@ -91,38 +122,48 @@
     background-color: $grey100;
     display: flex;
     flex-direction: column;
-
-    .text-wrapper {
-      @media ($tablet) {
-        margin-left: auto;
-        margin-right: auto;
-        width: 500px;
-      }
-
-      @media ($desktop-md) {
-        width: 650px;
-      }
-    }
   }
 
   &.ethos {
-    .content-inner {
+    display: flex;
+
+    @media ($tablet) {
+      padding: 0;
+    }
+
+    .image-block {
+      background: transparent url('http://zeeonefitness.jetchy.co.uk/wp-content/uploads/2019/05/zeeonefitness-training-ethos-1.jpg') no-repeat center top;
+      background-size: cover;
+      display: none;
+
       @media ($tablet) {
-        display: flex;
-        flex-direction: row;
+        display: inline-flex;
+        flex-basis: 50%;
       }
     }
 
-    .img-wrapper {
-      margin-bottom: $spacing-x3;
+    .content-block {
+      padding: $spacing-x2;
 
       @media ($tablet) {
-        flex: 1 0 50%;
-        margin-right: $spacing-x2;
+        flex-basis: 50%;
+        background-color: $black;
+        padding-top: $spacing-x4;
+        padding-bottom: $spacing-x4;
+        display: flex;
+        justify-content: center;
       }
 
-      img {
-        @include box-shadow;
+      .content-inner {
+        @media ($tablet) {
+          color: $white;
+          flex-basis: 75%;
+          text-align: center;
+        }
+
+        @media ($desktop-lg) {
+          flex-basis: 50%;
+        }
       }
     }
   }
