--- a/wp/wp-content/themes/blankslate-child/scss/header.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/header.scss
@@ -54,7 +54,7 @@
     #home-header-image {
       background-color: rgba(0, 0, 0, 0.5);
       background-blend-mode: multiply;  
-      background-position: center top 40%;
+      background-position: center top 35%;
       background-repeat: no-repeat;
       background-size: cover;  
     }
@@ -108,18 +108,19 @@
     text-transform: uppercase;
     
     .slogan {
-      font-size: 4.2rem;
+      font-size: 3.7rem;
       font-weight: 900;
       line-height: 0.8;
       width: 290px;
 
       @media ($tablet) {
         font-size: 6.2rem;
-        width: 430px;
+        width: 460px;
       }
 
       @media ($desktop-md) {
         font-size: 7.2rem;
+        width: 540px;
       }
     }
 
@@ -128,6 +129,7 @@
       font-size: 2.4rem;
       font-weight: 600;
       line-height: 1;
+      text-transform: none;
 
       @media ($tablet) {
         font-size: 3rem;
