--- a/wp/wp-content/themes/blankslate-child/scss/menu.scss
+++ b/wp/wp-content/themes/blankslate-child/scss/menu.scss
@@ -25,10 +25,10 @@
     a {
       color: $white;
       flex-basis: 100%;
-      font-size: 1.6rem;
+      font-size: 1.8rem;
+      font-weight: 600;
       text-align: center;
       text-decoration: none;
-      text-transform: uppercase;
     }
   }
 
