--- a/wp/wp-content/themes/blankslate-child/style.css
+++ b/wp/wp-content/themes/blankslate-child/style.css
@@ -101,6 +101,9 @@ div.wpforms-container-full .wpforms-form .wpforms-description {
     .hashtag {
       background-color: transparent; } }
 
+.photonic-loading {
+  background-color: transparent !important; }
+
 #header {
   background-color: #000000; }
 
@@ -142,7 +145,7 @@ div.wpforms-container-full .wpforms-form .wpforms-description {
     #home-header #featured-header #home-header-image {
       background-color: rgba(0, 0, 0, 0.5);
       background-blend-mode: multiply;
-      background-position: center top 40%;
+      background-position: center top 35%;
       background-repeat: no-repeat;
       background-size: cover; }
     #home-header #featured-header #home-header-video {
@@ -177,22 +180,24 @@ div.wpforms-container-full .wpforms-form .wpforms-description {
   #home-header #home-title {
     text-transform: uppercase; }
     #home-header #home-title .slogan {
-      font-size: 4.2rem;
+      font-size: 3.7rem;
       font-weight: 900;
       line-height: 0.8;
       width: 290px; }
       @media (min-width: 768px) {
         #home-header #home-title .slogan {
           font-size: 6.2rem;
-          width: 430px; } }
+          width: 460px; } }
       @media (min-width: 992px) {
         #home-header #home-title .slogan {
-          font-size: 7.2rem; } }
+          font-size: 7.2rem;
+          width: 540px; } }
     #home-header #home-title h1 {
       color: #ffba00;
       font-size: 2.4rem;
       font-weight: 600;
-      line-height: 1; }
+      line-height: 1;
+      text-transform: none; }
       @media (min-width: 768px) {
         #home-header #home-title h1 {
           font-size: 3rem; } }
@@ -215,8 +220,7 @@ div.wpforms-container-full .wpforms-form .wpforms-description {
     color: #f4f4f4;
     font-size: 1.1rem;
     margin-top: 8px;
-    text-align: center;
-    text-transform: uppercase; }
+    text-align: center; }
     #footer #copyright a {
       color: #f4f4f4; }
 
@@ -309,10 +313,10 @@ div.wpforms-container-full .wpforms-form .wpforms-description {
     #main-menu .menu-top a {
       color: #ffffff;
       flex-basis: 100%;
-      font-size: 1.6rem;
+      font-size: 1.8rem;
+      font-weight: 600;
       text-align: center;
-      text-decoration: none;
-      text-transform: uppercase; }
+      text-decoration: none; }
   #main-menu .menu-main-menu-container {
     flex-direction: column;
     height: 0;
